Changelog:
  Jan 5, 2018:
    1. add vertical sharding support

    2. update to v0.01.14

  Dec 1, 2017:
    1. using move instead of copying sql parsing results(tSqlParseItem)

  Nov 28, 2017:
    1. add 'create table' & 'drop table' usage support

    2. make 'myproxy' an open source project on github

    3. update to v0.01.13

  Nov 15, 2017:
    1. add an INITIAL version of 'aggregation processing' module named 'agg_hook'
        that do agregations on result sets

    2. update to v0.01.12 

  Nov 9, 2017:
    1. fix bug that a transaction (for example, doing a query) without valid
        cache  will be abandoned, it is now saved until the cache is available

    2. the 'rx()' method on datanode fds is now moved into module 'myproxy_backend'

    3. fix a memory leak problem of releasing column group buffers in a 
        'to-be-deleted' xa

    4. fix 'thread-unsafe' problem when returning back the cache

    5. the cache is forced to be removed when an 'incorrect' fd is closed


  Nov 7, 2017:
    1. make 'cache pool size', 'datanode group size', 'thread pool size'
        to be configuable 

    2. add support for '__comment' keyword of json files

  Nov 3, 2017:
    1. add a new module named 'dnmgr' to manage usages of datanode and
        datanode groups

    2. add the signal way to reload config from fs by sending signal 'SIGUSR2'

  Oct 30, 2017:
    1. add a new hook module named 'static_parse' which handles most sql
        adaption jobs from ZAS except placeholder adaption

    2. fixed a bug that the return_cache() call within deal_query_res() 
        will crash when error occors from datanodes

    3. updated to v0.01.11 alpha

  Oct 25, 2017:
    1. changed inheritance of class hook_object and hook_framework which 
        will no longer derive from sql_tree that improves performance of 
        the sql parsing process

  Oct 24, 2017:
    1. all request/sql interceptions are now be processed in 'hook' modules
